syntax = "proto3";

option go_package = "epistemic-me-backend/pb/models";

import "proto/models/dialectic.proto";
import "proto/models/beliefs.proto";

message SelfAgent {
  string id = 1;
  repeated string philosophies = 2;
  BeliefSystem belief_system = 3;
  repeated Dialectic dialectics = 4;
}

message Philosophy {
  string id = 1;
  string description = 2;
  bool extrapolate_contexts = 3;
}
